--- a/R2.conf
+++ b/R2.conf
@@ -14,9 +14,12 @@ router bgp 65231
 
     neighbor 192.168.63.1 peer-group PEER
 
+    neighbor 192.168.63.1 update-source 192.168.63.2
 
-    neighbor fd70::23 remote-as 65230
-    neighbor fd70::23 peer-group PEER
+    neighbor fd63::1 remote-as 65230
+    neighbor fd63::1 update-source fd63::2
+    neighbor fd63::1 peer-group PEER
+    neighbor fd63::1 activate
 
     address-family ipv4 unicast
         network 172.17.23.0/24
@@ -27,8 +30,17 @@ router bgp 65231
     address-family ipv6 unicast
         network 2a0b:4e07:c4:123::/64
         neighbor fd63::1 activate
+        neighbor fd63::1 next-hop-self
+        neighbor fd63::1 route-map REDISTRIBUTE_IPV6 out
         no neighbor 192.168.63.1 activate
     exit-address-family
+!
+ipv6 prefix-list ALLOW_ALL_IPV6 seq 5 permit ::/0 le 128
+!
+route-map REDISTRIBUTE_IPV6 permit 10
+    match ipv6 address prefix-list ALLOW_ALL_IPV6
+    set ipv6 next-hop global fd63::2
+    set ipv6 next-hop local fd63::2
 !
 log stdout
 line vtysh
