--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,5 +47,7 @@ services:
       - "8181:8181"
       - "6653:6653"
       - "8101:8101"
+      - "2620:2620"
     privileged: true
-    network_mode: "none"
+    network_mode: "bridge"
+
