--- a/frr.conf
+++ b/frr.conf
@@ -12,19 +12,25 @@ router bgp 65230
     neighbor PEER timers connect 5
     neighbor PEER advertisement-interval 5
     neighbor 192.168.63.2 remote-as 65231
-    neighbor 192.168.63.2 update-source 192.168.70.23
+    neighbor 192.168.63.2 update-source 192.168.63.1
     neighbor 192.168.63.2 peer-group PEER
     neighbor 192.168.70.253 remote-as 65000
+    neighbor 192.168.70.253 update-source 192.168.70.23
     neighbor 192.168.70.253 password winlab.nycu
     neighbor 192.168.70.253 peer-group PEER
+    neighbor 192.168.70.253 soft-reconfiguration inbound
+    neighbor 192.168.70.253 route-refresh-capability
     neighbor 192.168.70.253 solo
 
     neighbor fd63::2 remote-as 65231
-    neighbor fd63::2 update-source fd70::23
+    neighbor fd63::2 update-source fd63::1
     neighbor fd63::2 peer-group PEER
+    neighbor fd63::2 activate
     neighbor fd70::fe remote-as 65000
+    neighbor fd70::fe update-source fd70::23
     neighbor fd70::fe password winlab.nycu
     neighbor fd70::fe peer-group PEER
+    neighbor fd70::fe activate
     neighbor fd70::fe solo
 
     address-family ipv4 unicast
@@ -38,10 +44,14 @@ router bgp 65230
     address-family ipv6 unicast
         network 2a0b:4e07:c4:23::/64
         neighbor fd70::fe activate
+        neighbor fd70::fe next-hop-self
         neighbor fd63::2 activate
+        neighbor fd63::2 next-hop-self
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
     exit-address-family
-!
+    
+    # set ipv6 next-hop global fd70::23
+!   
 log stdout
 line vty
