--- a/R2.conf
+++ b/R2.conf
@@ -31,16 +31,11 @@ router bgp 65231
         network 2a0b:4e07:c4:123::/64
         neighbor fd63::1 activate
         neighbor fd63::1 next-hop-self
-        neighbor fd63::1 route-map REDISTRIBUTE_IPV6 out
         no neighbor 192.168.63.1 activate
     exit-address-family
+
 !
-ipv6 prefix-list ALLOW_ALL_IPV6 seq 5 permit ::/0 le 128
-!
-route-map REDISTRIBUTE_IPV6 permit 10
-    match ipv6 address prefix-list ALLOW_ALL_IPV6
-    set ipv6 next-hop global fd63::2
-    set ipv6 next-hop local fd63::2
+ipv6 forwarding
 !
 log stdout
 line vtysh
