--- a/frr.conf
+++ b/frr.conf
@@ -14,6 +14,7 @@ router bgp 65230
     neighbor 192.168.63.2 remote-as 65231
     neighbor 192.168.63.2 update-source 192.168.63.1
     neighbor 192.168.63.2 peer-group PEER
+
     neighbor 192.168.70.253 remote-as 65000
     neighbor 192.168.70.253 update-source 192.168.70.23
     neighbor 192.168.70.253 password winlab.nycu
@@ -22,10 +23,28 @@ router bgp 65230
     neighbor 192.168.70.253 route-refresh-capability
     neighbor 192.168.70.253 solo
 
+    neighbor 192.168.70.22 remote-as 65220
+    neighbor 192.168.70.22 update-source 192.168.70.23
+    neighbor 192.168.70.22 peer-group PEER
+
+    neighbor 192.168.70.24 remote-as 65240
+    neighbor 192.168.70.24 update-source 192.168.70.23
+    neighbor 192.168.70.24 peer-group PEER
+
+
     neighbor fd63::2 remote-as 65231
     neighbor fd63::2 update-source fd63::1
     neighbor fd63::2 peer-group PEER
     neighbor fd63::2 activate
+
+    neighbor fd70::22 remote-as 65220
+    neighbor fd70::22 update-source fd70::23
+    neighbor fd70::22 peer-group PEER
+
+    neighbor fd70::24 remote-as 65240
+    neighbor fd70::24 update-source fd70::23
+    neighbor fd70::24 peer-group PEER
+
     neighbor fd70::fe remote-as 65000
     neighbor fd70::fe update-source fd70::23
     neighbor fd70::fe password winlab.nycu
@@ -37,8 +56,12 @@ router bgp 65230
         network 172.16.23.0/24
         neighbor 192.168.63.2 activate
         neighbor 192.168.70.253 activate
+        neighbor 192.168.70.22 activate
+        neighbor 192.168.70.24 activate
         no neighbor fd63::2 activate
         no neighbor fd70::fe activate
+        no neighbor fd70::22 activate
+        no neighbor fd70::24 activate
     exit-address-family
 
     address-family ipv6 unicast
@@ -47,8 +70,15 @@ router bgp 65230
         neighbor fd70::fe next-hop-self
         neighbor fd63::2 activate
         neighbor fd63::2 next-hop-self
+        neighbor fd70::22 activate
+        neighbor fd70::22 next-hop-self
+        neighbor fd70::24 activate
+        neighbor fd70::24 next-hop-self
+
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
+        no neighbor 192.168.70.22 activate
+        no neighbor 192.168.70.24 activate
     exit-address-family
     
     # set ipv6 next-hop global fd70::23
