--- a/R2.conf
+++ b/R2.conf
@@ -2,6 +2,7 @@
 !
 frr defaults datacenter
 !
+# need change 23
 router bgp 65231
     bgp router-id 192.168.63.2
     timers bgp 3 9
@@ -10,24 +11,28 @@ router bgp 65231
     neighbor PEER timers connect 5
     neighbor PEER advertisement-interval 5
 
+    # need change 23
     neighbor 192.168.63.1 remote-as 65230
 
     neighbor 192.168.63.1 peer-group PEER
 
     neighbor 192.168.63.1 update-source 192.168.63.2
 
+    # need change 23
     neighbor fd63::1 remote-as 65230
     neighbor fd63::1 update-source fd63::2
     neighbor fd63::1 peer-group PEER
     neighbor fd63::1 activate
 
     address-family ipv4 unicast
+        # need change 23
         network 172.17.23.0/24
         neighbor 192.168.63.1 activate
         no neighbor fd63::1 activate
     exit-address-family
 
     address-family ipv6 unicast
+        # need change 23
         network 2a0b:4e07:c4:123::/64
         neighbor fd63::1 activate
         neighbor fd63::1 next-hop-self
