--- a/frr.conf
+++ b/frr.conf
@@ -3,55 +3,69 @@
 frr defaults datacenter
 !
 fpm connection ip 192.168.100.2 port 2620
+! # need change 23
+ipv6 prefix-list FD70FE-OUT seq 5 permit 2a0b:4e07:c4:23::/64
+ipv6 prefix-list FD70FE-OUT seq 10 permit 2a0b:4e07:c4:123::/64
+
 !
+route-map LIMIT-FD70FE permit 10
+  match ipv6 address prefix-list FD70FE-OUT
+!
+# need change 23
 router bgp 65230
+    # need change 23
     bgp router-id 192.168.70.23
     timers bgp 3 9
     neighbor PEER peer-group
     neighbor PEER ebgp-multihop
     neighbor PEER timers connect 5
-    neighbor PEER advertisement-interval 5
+    neighbor PEER advertisement-interval 1
+
+    # need change 23
     neighbor 192.168.63.2 remote-as 65231
     neighbor 192.168.63.2 update-source 192.168.63.1
     neighbor 192.168.63.2 peer-group PEER
 
+    # need change 23
     neighbor 192.168.70.253 remote-as 65000
     neighbor 192.168.70.253 update-source 192.168.70.23
     neighbor 192.168.70.253 password winlab.nycu
     neighbor 192.168.70.253 peer-group PEER
-    neighbor 192.168.70.253 soft-reconfiguration inbound
-    neighbor 192.168.70.253 route-refresh-capability
     neighbor 192.168.70.253 solo
 
+    # need change 23 and 22 24
     neighbor 192.168.70.22 remote-as 65220
     neighbor 192.168.70.22 update-source 192.168.70.23
     neighbor 192.168.70.22 peer-group PEER
 
+    # need change 23 and 22 24
     neighbor 192.168.70.24 remote-as 65240
     neighbor 192.168.70.24 update-source 192.168.70.23
     neighbor 192.168.70.24 peer-group PEER
 
-
+    # need change 23
     neighbor fd63::2 remote-as 65231
     neighbor fd63::2 update-source fd63::1
     neighbor fd63::2 peer-group PEER
-    neighbor fd63::2 activate
 
+    # need change 23 and 22 24
     neighbor fd70::22 remote-as 65220
     neighbor fd70::22 update-source fd70::23
     neighbor fd70::22 peer-group PEER
 
+    # need change 23 and 22 24
     neighbor fd70::24 remote-as 65240
     neighbor fd70::24 update-source fd70::23
     neighbor fd70::24 peer-group PEER
 
+    # need change 23
     neighbor fd70::fe remote-as 65000
     neighbor fd70::fe update-source fd70::23
     neighbor fd70::fe password winlab.nycu
     neighbor fd70::fe peer-group PEER
-    neighbor fd70::fe activate
     neighbor fd70::fe solo
 
+    # need change 23 and 22 24
     address-family ipv4 unicast
         network 172.16.23.0/24
         neighbor 192.168.63.2 activate
@@ -64,21 +78,26 @@ router bgp 65230
         no neighbor fd70::24 activate
     exit-address-family
 
+    # need change 23 and 22 24
     address-family ipv6 unicast
         network 2a0b:4e07:c4:23::/64
+        network 2a0b:4e07:c4:123::/64
+
         neighbor fd70::fe activate
-        neighbor fd70::fe next-hop-self
+        neighbor fd70::fe route-map LIMIT-FD70FE out
+
         neighbor fd63::2 activate
-        neighbor fd63::2 next-hop-self
+
         neighbor fd70::22 activate
-        neighbor fd70::22 next-hop-self
+
         neighbor fd70::24 activate
-        neighbor fd70::24 next-hop-self
 
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
         no neighbor 192.168.70.22 activate
         no neighbor 192.168.70.24 activate
+
+        
     exit-address-family
     
     # set ipv6 next-hop global fd70::23
