TODO: Peer traffic and anycast

--- a/R2.conf
+++ b/R2.conf
@@ -2,6 +2,9 @@
 !
 frr defaults datacenter
 !
+route-map SET-GLOBAL-NH-IN permit 10
+  set ipv6 next-hop prefer-global
+!
 # need change 23
 router bgp 65231
     bgp router-id 192.168.63.2
@@ -17,12 +20,14 @@ router bgp 65231
     neighbor 192.168.63.1 peer-group PEER
 
     neighbor 192.168.63.1 update-source 192.168.63.2
+    neighbot 192.168.63.1 tcp-mss 1400
 
     # need change 23
     neighbor fd63::1 remote-as 65230
     neighbor fd63::1 update-source fd63::2
     neighbor fd63::1 peer-group PEER
     neighbor fd63::1 activate
+    neighbor fd63::1 tcp-mss 1400
 
     address-family ipv4 unicast
         # need change 23
@@ -36,6 +41,7 @@ router bgp 65231
         network 2a0b:4e07:c4:123::/64
         neighbor fd63::1 activate
         neighbor fd63::1 next-hop-self
+        neighbor fd63::1 route-map SET-GLOBAL-NH-IN in
         no neighbor 192.168.63.1 activate
     exit-address-family
 
