--- a/frr.conf
+++ b/frr.conf
@@ -11,20 +11,29 @@ ipv6 prefix-list FD70FE-OUT seq 10 permit 2a0b:4e07:c4:123::/64
 route-map LIMIT-FD70FE permit 10
   match ipv6 address prefix-list FD70FE-OUT
 !
+! Route-map to set global IPv6 next-hop on incoming routes
+route-map SET-GLOBAL-NH-IN permit 10
+  set ipv6 next-hop prefer-global
+!
+route-map SET-GLOBAL-NH-FD70 permit 10
+  set ipv6 next-hop prefer-global
+  set ipv6 next-hop global fd70::fe
+!
 # need change 23
 router bgp 65230
     # need change 23
     bgp router-id 192.168.70.23
-    timers bgp 3 9
+    timers bgp 80 240
     neighbor PEER peer-group
     neighbor PEER ebgp-multihop
-    neighbor PEER timers connect 5
-    neighbor PEER advertisement-interval 1
+    neighbor PEER timers connect 240
+    neighbor PEER advertisement-interval 80
 
     # need change 23
     neighbor 192.168.63.2 remote-as 65231
     neighbor 192.168.63.2 update-source 192.168.63.1
     neighbor 192.168.63.2 peer-group PEER
+    neighbor 192.168.63.2 tcp-mss 1330
 
     # need change 23
     neighbor 192.168.70.253 remote-as 65000
@@ -32,31 +41,37 @@ router bgp 65230
     neighbor 192.168.70.253 password winlab.nycu
     neighbor 192.168.70.253 peer-group PEER
     neighbor 192.168.70.253 solo
+    neighbor 192.168.70.253 tcp-mss 1400
 
     # need change 23 and 22 24
-    neighbor 192.168.70.22 remote-as 65220
-    neighbor 192.168.70.22 update-source 192.168.70.23
-    neighbor 192.168.70.22 peer-group PEER
+    # neighbor 192.168.70.22 remote-as 65220
+    # neighbor 192.168.70.22 update-source 192.168.70.23
+    # neighbor 192.168.70.22 peer-group PEER
+    # neighbor 192.168.70.22 tcp-mss 1400
 
     # need change 23 and 22 24
-    neighbor 192.168.70.24 remote-as 65240
-    neighbor 192.168.70.24 update-source 192.168.70.23
-    neighbor 192.168.70.24 peer-group PEER
+    # neighbor 192.168.70.24 remote-as 65240
+    # neighbor 192.168.70.24 update-source 192.168.70.23
+    # neighbor 192.168.70.24 peer-group PEER
+    # neighbor 192.168.70.24 tcp-mss 1400
 
     # need change 23
     neighbor fd63::2 remote-as 65231
     neighbor fd63::2 update-source fd63::1
     neighbor fd63::2 peer-group PEER
+    neighbor fd63::2 tcp-mss 1400
 
     # need change 23 and 22 24
-    neighbor fd70::22 remote-as 65220
-    neighbor fd70::22 update-source fd70::23
-    neighbor fd70::22 peer-group PEER
+    # neighbor fd70::22 remote-as 65220
+    # neighbor fd70::22 update-source fd70::23
+    # neighbor fd70::22 peer-group PEER
+    # neighbor fd70::22 tcp-mss 1400
 
     # need change 23 and 22 24
-    neighbor fd70::24 remote-as 65240
-    neighbor fd70::24 update-source fd70::23
-    neighbor fd70::24 peer-group PEER
+    # neighbor fd70::24 remote-as 65240
+    # neighbor fd70::24 update-source fd70::23
+    # neighbor fd70::24 peer-group PEER
+    # neighbor fd70::24 tcp-mss 1400
 
     # need change 23
     neighbor fd70::fe remote-as 65000
@@ -64,18 +79,19 @@ router bgp 65230
     neighbor fd70::fe password winlab.nycu
     neighbor fd70::fe peer-group PEER
     neighbor fd70::fe solo
+    neighbor fd70::fe tcp-mss 1400
 
     # need change 23 and 22 24
     address-family ipv4 unicast
         network 172.16.23.0/24
         neighbor 192.168.63.2 activate
         neighbor 192.168.70.253 activate
-        neighbor 192.168.70.22 activate
-        neighbor 192.168.70.24 activate
+        # neighbor 192.168.70.22 activate
+        # neighbor 192.168.70.24 activate
         no neighbor fd63::2 activate
         no neighbor fd70::fe activate
-        no neighbor fd70::22 activate
-        no neighbor fd70::24 activate
+        # no neighbor fd70::22 activate
+        # no neighbor fd70::24 activate
     exit-address-family
 
     # need change 23 and 22 24
@@ -85,17 +101,19 @@ router bgp 65230
 
         neighbor fd70::fe activate
         neighbor fd70::fe route-map LIMIT-FD70FE out
+        neighbor fd70::fe route-map SET-GLOBAL-NH-FD70 in
 
         neighbor fd63::2 activate
+        neighbor fd63::2 route-map SET-GLOBAL-NH-IN in
 
-        neighbor fd70::22 activate
+        # neighbor fd70::22 activate
 
-        neighbor fd70::24 activate
+        # neighbor fd70::24 activate
 
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
-        no neighbor 192.168.70.22 activate
-        no neighbor 192.168.70.24 activate
+        # no neighbor 192.168.70.22 activate
+        # no neighbor 192.168.70.24 activate
 
         
     exit-address-family
