--- a/frr.conf
+++ b/frr.conf
@@ -3,22 +3,87 @@
 frr defaults datacenter
 !
 fpm connection ip 10.10.10.2 port 2620
-! # need change 23
-ipv6 prefix-list FD70FE-OUT seq 5 permit 2a0b:4e07:c4:23::/64
-ipv6 prefix-list FD70FE-OUT seq 10 permit 2a0b:4e07:c4:123::/64
+! 
+# need change 23
+# TO 253
+ip prefix-list 253-OUT seq 5 permit 172.16.23.0/24
+ip prefix-list 253-OUT seq 10 permit 172.17.23.0/24
+rout-map LIMIT-253 permit 10
+  match ip address prefix-list 253-OUT
+# FROM 253
+ip prefix-list 253-IN-DENY seq 5 permit 172.17.22.0/24
+ip prefix-list 253-IN-DENY seq 10 permit 172.17.24.0/24
+ip prefix-list 253-IN-DENY seq 15 permit 172.17.10.0/24
+ip prefix-list 253-IN-DENY seq 100 deny any
+route-map 253-NH permit 10
+  match ip address prefix-list 253-IN-DENY
+  set ip next-hop 192.168.70.253
+# TO 22
+ip prefix-list 22-OUT seq 5 permit 172.16.23.0/24
+ip prefix-list 22-OUT seq 10 deny any
+rout-map LIMIT-22 permit 10
+  match ip address prefix-list 22-OUT
+# FROM 22
+ip prefix-list 22-IN seq 5 permit 172.16.22.0/24
+ip prefix-list 22-IN seq 10 deny any
+route-map 22-NH permit 10
+  match ip address prefix-list 22-IN
+  set ip next-hop 192.168.70.22
+# TO 24
+ip prefix-list 24-OUT seq 5 permit 172.16.23.0/24
+ip prefix-list 24-OUT seq 10 deny any
+rout-map LIMIT-24 permit 10
+  match ip address prefix-list 24-OUT
+# FROM 24
+ip prefix-list 24-IN seq 5 permit 172.16.22.0/24
+ip prefix-list 24-IN seq 10 deny any
+route-map 24-NH permit 10
+  match ip address prefix-list 24-IN
+  set ip next-hop 192.168.70.24
 
-!
-route-map LIMIT-FD70FE permit 10
-  match ipv6 address prefix-list FD70FE-OUT
-!
-! Route-map to set global IPv6 next-hop on incoming routes
-route-map SET-GLOBAL-NH-IN permit 10
-  set ipv6 next-hop prefer-global
-!
-route-map SET-GLOBAL-NH-FD70 permit 10
+#====================== ipv6
+
+# TO FE
+ipv6 prefix-list FD70-OUT seq 5 permit 2a0b:4e07:c4:23::/64
+ipv6 prefix-list FD70-OUT seq 10 permit 2a0b:4e07:c4:123::/64
+route-map LIMIT-FD70 permit 10
+  match ipv6 address prefix-list FD70-OUT
+# FROM FE
+ipv6 prefix-list FD70-IN seq 5 permit 2a0b:4e07:c4:10::/64
+ipv6 prefix-list FD70-IN seq 10 permit 2a0b:4e07:c4:124::/64
+ipv6 prefix-list FD70-IN seq 15 permit 2a0b:4e07:c4:122::/64
+ipv6 prefix-list FD70-IN seq 20 deny 2a0b:4e07:c4:110::/64
+ipv6 prefix-list FD70-IN seq 25 deny 2a0b:4e07:c4:24::/64
+ipv6 prefix-list FD70-IN seq 30 deny 2a0b:4e07:c4:22::/64
+ipv6 prefix-list FD70-IN seq 100 permit any
+route-map FD70-NH permit 10
+  match ipv6 address prefix-list FD70-IN
   set ipv6 next-hop prefer-global
   set ipv6 next-hop global fd70::fe
-!
+# TO 22
+ipv6 prefix-list FD22-OUT seq 5 permit 2a0b:4e07:c4:23::/64
+ipv6 prefix-list FD22-OUT seq 10 deny any
+route-map LIMIT-FD22 permit 10
+  match ipv6 address prefix-list FD22-OUT
+# FROM 22
+ipv6 prefix-list FD22-IN seq 5 permit 2a0b:4e07:c4:22::/64
+ipv6 prefix-list FD22-IN seq 10 deny any
+route-map FD22-NH permit 10
+  match ipv6 address prefix-list FD22-IN
+  set ipv6 next-hop prefer-global
+  set ipv6 next-hop global fd70::22
+# TO 24
+ipv6 prefix-list FD24-OUT seq 5 permit 2a0b:4e07:c4:23::/64
+ipv6 prefix-list FD24-OUT seq 10 deny any
+route-map LIMIT-FD24 permit 10
+  match ipv6 address prefix-list FD24-OUT
+# FROM 24
+ipv6 prefix-list FD24-IN seq 5 permit 2a0b:4e07:c4:24::/64
+ipv6 prefix-list FD24-IN seq 10 deny any
+route-map FD24-NH permit 10
+  match ipv6 address prefix-list FD24-IN
+  set ipv6 next-hop prefer-global
+  set ipv6 next-hop global fd70::24
 # need change 23
 router bgp 65230
     # need change 23
@@ -50,10 +115,11 @@ router bgp 65230
     # neighbor 192.168.70.22 tcp-mss 1400
 
     # need change 23 and 22 24
-    # neighbor 192.168.70.24 remote-as 65240
-    # neighbor 192.168.70.24 update-source 192.168.70.23
-    # neighbor 192.168.70.24 peer-group PEER
-    # neighbor 192.168.70.24 tcp-mss 1400
+    neighbor 192.168.70.24 remote-as 65240
+    neighbor 192.168.70.24 update-source 192.168.70.23
+    neighbor 192.168.70.24 peer-group PEER
+    neighbor 192.168.70.24 tcp-mss 1400
+    neighbor 192.168.70.24 solo
 
     # need change 23
     neighbor fd63::2 remote-as 65231
@@ -66,12 +132,14 @@ router bgp 65230
     # neighbor fd70::22 update-source fd70::23
     # neighbor fd70::22 peer-group PEER
     # neighbor fd70::22 tcp-mss 1400
+    # neighbor fd70::22 solo
 
     # need change 23 and 22 24
-    # neighbor fd70::24 remote-as 65240
-    # neighbor fd70::24 update-source fd70::23
-    # neighbor fd70::24 peer-group PEER
-    # neighbor fd70::24 tcp-mss 1400
+    neighbor fd70::24 remote-as 65240
+    neighbor fd70::24 update-source fd70::23
+    neighbor fd70::24 peer-group PEER
+    neighbor fd70::24 tcp-mss 1400
+    neighbor fd70::24 solo
 
     # need change 23
     neighbor fd70::fe remote-as 65000
@@ -84,41 +152,52 @@ router bgp 65230
     # need change 23 and 22 24
     address-family ipv4 unicast
         network 172.16.23.0/24
+
         neighbor 192.168.63.2 activate
         neighbor 192.168.70.253 activate
         # neighbor 192.168.70.22 activate
-        # neighbor 192.168.70.24 activate
+        neighbor 192.168.70.24 activate
+
         no neighbor fd63::2 activate
         no neighbor fd70::fe activate
         # no neighbor fd70::22 activate
-        # no neighbor fd70::24 activate
+        no neighbor fd70::24 activate
+
+        neighbor 192.168.70.253 route-map LIMIT-253 out
+        neighbor 192.168.70.253 route-map 253-NH in
+
+        # neighbor 192.168.70.22 route-map LIMIT-22 out
+        # neighbor 192.168.70.22 route-map 22-NH in
+
+        neighbor 192.168.70.24 route-map LIMIT-24 out
+        neighbor 192.168.70.24 route-map 24-NH in
+
     exit-address-family
 
     # need change 23 and 22 24
     address-family ipv6 unicast
         network 2a0b:4e07:c4:23::/64
-        network 2a0b:4e07:c4:123::/64
 
         neighbor fd70::fe activate
-        neighbor fd70::fe route-map LIMIT-FD70FE out
-        neighbor fd70::fe route-map SET-GLOBAL-NH-FD70 in
-
         neighbor fd63::2 activate
-        neighbor fd63::2 route-map SET-GLOBAL-NH-IN in
-
         # neighbor fd70::22 activate
-
-        # neighbor fd70::24 activate
+        neighbor fd70::24 activate
 
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
         # no neighbor 192.168.70.22 activate
-        # no neighbor 192.168.70.24 activate
+        no neighbor 192.168.70.24 activate
 
-        
+        neighbor fd70::fe route-map LIMIT-FD70 out
+        neighbor fd70::fe route-map FD70-NH in
+
+        # neighbor fd70::22 route-map LIMIT-FD22 out
+        # neighbor fd70::22 route-map FD22-NH in
+
+        neighbor fd70::24 route-map LIMIT-FD24 out
+        neighbor fd70::24 route-map FD24-NH in
+
     exit-address-family
-    
-    # set ipv6 next-hop global fd70::23
 !   
 ipv6 forwarding
 !
