New stable version

--- a/frr.conf
+++ b/frr.conf
@@ -8,6 +8,7 @@ fpm connection ip 10.10.10.2 port 2620
 # TO 253
 ip prefix-list 253-OUT seq 5 permit 172.16.23.0/24
 ip prefix-list 253-OUT seq 10 permit 172.17.23.0/24
+ip prefix-list 253-OUT seq 15 deny any
 rout-map LIMIT-253 permit 10
   match ip address prefix-list 253-OUT
 # FROM 253
@@ -35,7 +36,7 @@ ip prefix-list 24-OUT seq 10 deny any
 rout-map LIMIT-24 permit 10
   match ip address prefix-list 24-OUT
 # FROM 24
-ip prefix-list 24-IN seq 5 permit 172.16.22.0/24
+ip prefix-list 24-IN seq 5 permit 172.16.24.0/24
 ip prefix-list 24-IN seq 10 deny any
 route-map 24-NH permit 10
   match ip address prefix-list 24-IN
@@ -88,11 +89,11 @@ route-map FD24-NH permit 10
 router bgp 65230
     # need change 23
     bgp router-id 192.168.70.23
-    timers bgp 80 240
+    timers bgp 30 90
     neighbor PEER peer-group
     neighbor PEER ebgp-multihop
-    neighbor PEER timers connect 240
-    neighbor PEER advertisement-interval 80
+    neighbor PEER timers connect 5
+    neighbor PEER advertisement-interval 5
 
     # need change 23
     neighbor 192.168.63.2 remote-as 65231
@@ -106,20 +107,20 @@ router bgp 65230
     neighbor 192.168.70.253 password winlab.nycu
     neighbor 192.168.70.253 peer-group PEER
     neighbor 192.168.70.253 solo
-    neighbor 192.168.70.253 tcp-mss 1400
+    # neighbor 192.168.70.253 tcp-mss 1330
 
     # need change 23 and 22 24
-    # neighbor 192.168.70.22 remote-as 65220
-    # neighbor 192.168.70.22 update-source 192.168.70.23
-    # neighbor 192.168.70.22 peer-group PEER
-    # neighbor 192.168.70.22 tcp-mss 1400
+    neighbor 192.168.70.22 remote-as 65220
+    neighbor 192.168.70.22 update-source 192.168.70.23
+    neighbor 192.168.70.22 peer-group PEER
+    neighbor 192.168.70.22 tcp-mss 1400
 
     # need change 23 and 22 24
     neighbor 192.168.70.24 remote-as 65240
     neighbor 192.168.70.24 update-source 192.168.70.23
     neighbor 192.168.70.24 peer-group PEER
     neighbor 192.168.70.24 tcp-mss 1400
-    neighbor 192.168.70.24 solo
+    # neighbor 192.168.70.24 solo
 
     # need change 23
     neighbor fd63::2 remote-as 65231
@@ -128,10 +129,10 @@ router bgp 65230
     neighbor fd63::2 tcp-mss 1400
 
     # need change 23 and 22 24
-    # neighbor fd70::22 remote-as 65220
-    # neighbor fd70::22 update-source fd70::23
-    # neighbor fd70::22 peer-group PEER
-    # neighbor fd70::22 tcp-mss 1400
+    neighbor fd70::22 remote-as 65220
+    neighbor fd70::22 update-source fd70::23
+    neighbor fd70::22 peer-group PEER
+    neighbor fd70::22 tcp-mss 1400
     # neighbor fd70::22 solo
 
     # need change 23 and 22 24
@@ -139,15 +140,15 @@ router bgp 65230
     neighbor fd70::24 update-source fd70::23
     neighbor fd70::24 peer-group PEER
     neighbor fd70::24 tcp-mss 1400
-    neighbor fd70::24 solo
+    # neighbor fd70::24 solo
 
     # need change 23
     neighbor fd70::fe remote-as 65000
     neighbor fd70::fe update-source fd70::23
     neighbor fd70::fe password winlab.nycu
     neighbor fd70::fe peer-group PEER
-    neighbor fd70::fe solo
-    neighbor fd70::fe tcp-mss 1400
+    # neighbor fd70::fe solo
+    neighbor fd70::fe tcp-mss 1330
 
     # need change 23 and 22 24
     address-family ipv4 unicast
@@ -155,21 +156,21 @@ router bgp 65230
 
         neighbor 192.168.63.2 activate
         neighbor 192.168.70.253 activate
-        # neighbor 192.168.70.22 activate
+        neighbor 192.168.70.22 activate
         neighbor 192.168.70.24 activate
 
         no neighbor fd63::2 activate
         no neighbor fd70::fe activate
-        # no neighbor fd70::22 activate
+        no neighbor fd70::22 activate
         no neighbor fd70::24 activate
 
-        neighbor 192.168.70.253 route-map LIMIT-253 out
+        # neighbor 192.168.70.253 route-map LIMIT-253 out
         neighbor 192.168.70.253 route-map 253-NH in
 
         # neighbor 192.168.70.22 route-map LIMIT-22 out
-        # neighbor 192.168.70.22 route-map 22-NH in
+        neighbor 192.168.70.22 route-map 22-NH in
 
-        neighbor 192.168.70.24 route-map LIMIT-24 out
+        # neighbor 192.168.70.24 route-map LIMIT-24 out
         neighbor 192.168.70.24 route-map 24-NH in
 
     exit-address-family
@@ -180,19 +181,19 @@ router bgp 65230
 
         neighbor fd70::fe activate
         neighbor fd63::2 activate
-        # neighbor fd70::22 activate
+        neighbor fd70::22 activate
         neighbor fd70::24 activate
 
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
-        # no neighbor 192.168.70.22 activate
+        no neighbor 192.168.70.22 activate
         no neighbor 192.168.70.24 activate
 
         neighbor fd70::fe route-map LIMIT-FD70 out
         neighbor fd70::fe route-map FD70-NH in
 
-        # neighbor fd70::22 route-map LIMIT-FD22 out
-        # neighbor fd70::22 route-map FD22-NH in
+        neighbor fd70::22 route-map LIMIT-FD22 out
+        neighbor fd70::22 route-map FD22-NH in
 
         neighbor fd70::24 route-map LIMIT-FD24 out
         neighbor fd70::24 route-map FD24-NH in
