--- a/frr.conf
+++ b/frr.conf
@@ -116,10 +116,10 @@ router bgp 65230
     neighbor 192.168.70.22 tcp-mss 1400
 
     # need change 23 and 22 24
-    neighbor 192.168.70.24 remote-as 65240
-    neighbor 192.168.70.24 update-source 192.168.70.23
-    neighbor 192.168.70.24 peer-group PEER
-    neighbor 192.168.70.24 tcp-mss 1400
+    # neighbor 192.168.70.24 remote-as 65240
+    # neighbor 192.168.70.24 update-source 192.168.70.23
+    # neighbor 192.168.70.24 peer-group PEER
+    # neighbor 192.168.70.24 tcp-mss 1400
     # neighbor 192.168.70.24 solo
 
     # need change 23
@@ -133,13 +133,13 @@ router bgp 65230
     neighbor fd70::22 update-source fd70::23
     neighbor fd70::22 peer-group PEER
     neighbor fd70::22 tcp-mss 1400
-    # neighbor fd70::22 solo
+    neighbor fd70::22 solo
 
     # need change 23 and 22 24
-    neighbor fd70::24 remote-as 65240
-    neighbor fd70::24 update-source fd70::23
-    neighbor fd70::24 peer-group PEER
-    neighbor fd70::24 tcp-mss 1400
+    # neighbor fd70::24 remote-as 65240
+    # neighbor fd70::24 update-source fd70::23
+    # neighbor fd70::24 peer-group PEER
+    # neighbor fd70::24 tcp-mss 1400
     # neighbor fd70::24 solo
 
     # need change 23
@@ -157,7 +157,7 @@ router bgp 65230
         neighbor 192.168.63.2 activate
         neighbor 192.168.70.253 activate
         neighbor 192.168.70.22 activate
-        neighbor 192.168.70.24 activate
+        # neighbor 192.168.70.24 activate
 
         no neighbor fd63::2 activate
         no neighbor fd70::fe activate
@@ -182,7 +182,7 @@ router bgp 65230
         neighbor fd70::fe activate
         neighbor fd63::2 activate
         neighbor fd70::22 activate
-        neighbor fd70::24 activate
+        # neighbor fd70::24 activate
 
         no neighbor 192.168.63.2 activate
         no neighbor 192.168.70.253 activate
